update notify
